style: fixed counter alignment

--- a/src/index.css
+++ b/src/index.css
@@ -260,7 +260,7 @@ h3 {
   border-radius: 50%;
   color: white;
   left: 14%;
-  top: 3%;
+  top: 2%;
   display: flex;
   padding: 2px 7px 2px 6px;
   justify-content: center;
